# kinodynamic-motion-planning-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bench_timeopt_script.py  croco_main.cpp  debug_print_Tn.py  debug_stats.py  generate_primitives.bash  improve.bash  old_readme.md  parse_report.py  plot_mpc.py  readme.md  run_server.bash  runall.sh  sympy_cartpole.py  sympy_derivatives.py  sympy_lagrangian_dyn.py  sympy_play.py  sympy_quad2d.py  sympy_quad2d_second_try.py  welf_paper.bash
.github/workflows/: build.yml
algs/: dbastar_v0_heu0.yaml  geo_v0.yaml  geo_v1.yaml  idbastar_tmp.yaml  idbastar_v0.yaml  idbastar_v0_OptPRIM.yaml  idbastar_v0_analysis_d1.yaml  idbastar_v0_analysis_d2.yaml  idbastar_v0_freetime.yaml  idbastar_v0_heu0.yaml  idbastar_v0_heu1.yaml  idbastar_v0_mpc.yaml  idbastar_v0_mpcc.yaml  idbastar_v0_rand.yaml  idbastar_v0_search.yaml  idbastar_v1.yaml  sst_tmp.yaml  sst_v0.yaml  sst_v1.yaml  sst_v2.yaml  sst_v3.yaml  sst_v4.yaml
bench/: bench_abblation.yaml  bench_abblation_study.yaml  bench_search.yaml  bench_time.yaml  bench_tmp.yaml  compare.yaml
benchmark/acrobot/: feasible_p_empty.yaml  half_swing_up_empty.yaml  swing_down.yaml  swing_down_easy.yaml  swing_up_empty.yaml  swing_up_empty_guess_db.yaml  swing_up_empty_init_guess.yaml  swing_up_empty_result_opti.yaml  swing_up_obs.yaml  swing_up_obs_hard.yaml
benchmark/carFirstOrder/: kink_0.g  kink_0.yaml  parallelpark_0.g  parallelpark_0.yaml  visualize.py
benchmark/carFirstOrderWithTrailers/: bugtrap_0.yaml  kink_0.yaml  parallelpark_0.yaml  visualize.py
benchmark/carSecondOrder/: kink_0.yaml  parallelpark_0.yaml  visualize.py
benchmark/car_first_order_with_1_trailers_0/: bugtrap_0.yaml  easy_0.yaml  kink_0.yaml  parallelpark_0.yaml  visualize.py
benchmark/dubins/: bugtrap_0.yaml  kink_0.yaml  parallelpark_0.yaml  visualize.py
benchmark/quad2d/: empty_0.yaml  empty_1.yaml  empty_2.yaml  fall_through.yaml  quad2d_recovery_obs.yaml  quad2d_recovery_wo_obs.yaml  quad_bugtrap.yaml  quad_obs_0.yaml  quad_obs_1.yaml  quad_obs_column.yaml  quad_obs_recovery.yaml  quad_obs_recovery_upside.yaml  quad_obs_recovery_very_easy.yaml  recovery_hard.yaml  rocks.yaml
benchmark/quad2dpole/: down.yaml  empty_0.yaml  hover_up_0.yaml  move_with_down.yaml  move_with_up.yaml  up.yaml  up_obs.yaml  window.yaml  window_easy.yaml  (+1 more)
data_welf_yaml/: croco_flip.yaml  croco_flip_q.yaml  croco_loop.yaml  croco_loop_q.yaml  croco_recovery.yaml  croco_recovery_q.yaml  croco_simple.yaml  croco_simple_q.yaml  guess_flip.yaml  guess_flip_q.yaml  guess_loop.yaml  guess_loop_q.yaml  guess_obstacle_flight.yaml  guess_recovery_flight.yaml  guess_simple_flight.yaml  result_flip_CASADI.yaml  result_flip_KOMO.yaml  result_flip_SCVX.yaml  result_obstacle_flight_CASADI.yaml  result_obstacle_flight_KOMO.yaml  result_obstacle_flight_SCVX.yaml  result_recovery_flight_CASADI.yaml  result_recovery_flight_KOMO.yaml  result_recovery_flight_SCVX.yaml  result_simple_flight_CASADI.yaml  result_simple_flight_KOMO.yaml  result_simple_flight_SCVX.yaml
models/: acrobot_v0.yaml  car1_v0.yaml  car2_v0.yaml  quad2d_v0.yaml  quad2dpole_v0.yaml  quad3d_omplapp.yaml  quad3d_v0.yaml  quad3d_v1.yaml  quad3d_v2.yaml  quad3d_v3.yaml  quad3d_v4.yaml  quad3d_v5.yaml  quad3d_v6.yaml  unicycle1_v0.yaml  unicycle1_v1.yaml  unicycle1_v2.yaml  unicycle2_v0.yaml
paper/: env.g  fig1.py  fig1_2.py  fig2.py  result_dbastar_sol1.yaml  table1.py
problems_timeopt/: bug_1_bad.yaml  bug_1_good.yaml  bug_1_very_good.yaml  bug_2.yaml  bug_car.yaml  bug_trailer.yaml  kink_1_good.yaml  kink_2.yaml  park_1_bad.yaml  park_1_good.yaml  park_1_very_good.yaml  problem1.yaml  problem2.yaml  quad2d_empty_0.yaml  quad2d_empty_1.yaml  quad2d_obs.yaml  quad2d_obs_0.yaml  quad2d_recovery.yaml  quad2d_recovery_good_guess.yaml  quad2d_recovery_very_easy.yaml
scripts/: ablation_study.py  analyze_primitives.py  benchmark.py  benchmark_stats.py  checker.py  croco_models.py  gen_motion_primitive.py  gen_motion_primitive_komo.py  gen_sbpl_prim.py  main_croco.py  main_dbastar.py  main_komo.py  main_ompl.py  main_rrt.py  main_sbpl.py  main_scp.py  new_benchmark.py  plot_stats.py  ref_croco.py  robots.py  sbpl_prim_vis.py  scp.py  translate_g.py  translate_g_trailer.py  translate_utils.py  unicycle_utils.py  utils_motion_primitives.py  utils_optimization.py  visualize.py  yaml_to_plain.py
solvers_timeopt/: bsearch_v0.yaml  freetime_v0.yaml  mpc_v0.yaml  mpcc_v0.yaml  trajopt_bnob_v0.yaml  trajopt_v0.yaml
src/: AO_RRT.cpp  AO_RRT.h  car_utils.cpp  car_utils.hpp  car_with_trailer.g  car_with_trailer_base.g  collision_checker.cpp  collision_checker.hpp  croco_macros.hpp  croco_main.cpp  croco_models.cpp  croco_models.hpp  dbastar.cpp  dbastar.hpp  dbrrt.cpp  dbrrt.hpp  evaluate_nn.cpp  example_nigh.cpp  fclHelper.hpp  fclStateValidityChecker.hpp  for_each_macro.hpp  g_trailer_test.g  general_utils.hpp  generate_primitives.cpp  generate_primitives.hpp  hello_world_spdlog.cpp  idbastar.cpp  idbastar.hpp  main_check_robot.cpp  main_dbastar.cpp  main_dbrrt.cpp  main_fcl.cpp  main_idbastar.cpp  main_ompl.cpp  main_ompl_aorrt.cpp  main_ompl_geo.cpp  main_ompl_geometric.cpp  main_ompl_rrt.cpp  main_primitives.cpp  main_rai.cpp  (+36 more)
test/: env_debug_bugtrap_trailer.g  example_bugtrap.g  test_croco.py  test_dbg.py  test_dynamics.py  test_gen_motion_primitive.py  test_komo.py  test_komo_standalone.py  test_new_features.py  test_scp.py  test_trailer_komo.py
unittest/: test_croco.cpp  test_db.cpp  test_db_deprecated.cpp  test_dbrrt.cpp  test_idbastar.cpp  test_ompl_sst.cpp  test_primitives.cpp  traj_db_acrobot_swingup.yaml  traj_db_quad2d_recovery.yaml  traj_db_quad2d_recovery_2.yaml  traj_db_quad3d_oneobs.yaml  traj_db_recovery.yaml  traj_db_uni1_bugtrap.yaml
viewer/: acrobot_collisions.py  acrobot_viewer.py  car_collisions.py  car_with_trailer_viewer.py  quad2d_viewer.py  quad2dpole_viewer.py  quad3d_collisions.py  quad3d_viewer.py  robot_viewer.py  test_uav.py  unicycle1_collisions.py  unicycle1_viewer.py  unicycle2_viewer.py  viewer_cli.py  viewer_test.py  viewer_utils.py
(+163 files in other folders)
